# fhsenv

./: .gitignore  .mcvm  Cargo.toml  README.md  default.nix  flake.nix  get-target-files.nix  jsont.sh  pivoter.nix  result  wtf.txt
logs/: 1733710700_flake_nix.ans  1733710718_flake_nix.ans
src/: main.rs  prepare_env.rs
test/: flake.nix  shell.nix
test2/: flake.nix
