[package]
name = "fhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
nix = { version = "0.29.0", features = ["fs", "mount", "sched", "user"] }
regex = "1.11.1"
serde_json = "1.0.132"
tempfile = "3.14.0"
