[package]
name = "fhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
# glib = "0.20.5"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["fs", "mount", "sched", "signal", "user"] }
regex = "1.11.1"
serde_json = "1.0.132"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["fs", "macros", "process", "rt"] }
